--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -88,8 +88,10 @@ general {
     gaps_out = 2
     border_size = 1
 
-    col.active_border = rgba(b4befe, ff) rgba(cba6f7, ff) 45deg
-    col.inactive_border = rgba(6c7086, aa) 
+    col.active_border=$teal
+    col.inactive_border=$surface2
+    #col.active_border = rgba(b4befe, ff) rgba(cba6f7, ff) 45deg
+    #col.inactive_border = rgba(6c7086, aa) 
     col.nogroup_border = rgba(fab387, aa)  
     col.nogroup_border_active = rgba(fab387, ff) 
 
@@ -148,10 +150,9 @@ exec-once = /usr/lib/lxpolkit
 exec-once = mpd
 exec-once = mpDris2
 
-$term = alacritty
 $host = kitty
 
-$chrome = flatpak run com.google.chrome
+$chrome = flatpak run com.google.Chrome
 
 $screenshot-full = $scripts/screenshot full
 $screenshot-area = $scripts/screenshot area
@@ -255,8 +256,8 @@ bind = $mainMod, X, exec, $record-stop
 bind = $mainMod, I, exec, $waybar-toggle-0
 bind = $mainMod SHIFT, I, exec, $waybar-toggle-1
 
-#bind = $mainMod, O, exec, hyprctl opacity plus 0.1
-#bind = $mainMod SHIFT, O, exec, hyprctl opacity minus 0.1
+bind = $mainMod, O, exec, makoctl dismiss 
+bind = $mainMod SHIFT, O, exec, makoctl dismiss -a
 
 bind = $mainMod, E, exec, thunar
 
@@ -376,7 +377,7 @@ input {
     kb_variant = mac
     kb_options = caps:none
     kb_rules =
-    follow_mouse = 0
+    follow_mouse = 2
     touchpad {
         tap-to-click = yes
         natural_scroll = yes
