--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -88,12 +88,10 @@ general {
     gaps_out = 2
     border_size = 1
 
-    col.active_border=$teal
-    col.inactive_border=$surface2
-    #col.active_border = rgba(b4befe, ff) rgba(cba6f7, ff) 45deg
-    #col.inactive_border = rgba(6c7086, aa) 
-    col.nogroup_border = rgba(fab387, aa)  
-    col.nogroup_border_active = rgba(fab387, ff) 
+    col.active_border=$surface2
+    col.inactive_border=$surface0
+    col.nogroup_border=$teal 
+    col.nogroup_border_active=$mantle
 
     layout = dwindle
     resize_on_border = true
@@ -114,9 +112,6 @@ exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ""
 # import variables into system-user environment
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# gammastep configured differently for each display
-#exec-once = gammastep -t 3500:3500 -l 30.2:97.7 -m wayland
 
 # notifications
 exec-once = mako
