--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -195,16 +195,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # mapping workspaces to displays
 workspace = 1, monitor:eDP-1, default:true
@@ -294,6 +294,7 @@ bind = $mainMod SHIFT, B, exec, $music-dl
 bind = $mainMod SHIFT, Slash, exec, $fzf-shortcuts
 
 # the +Tab and Shift+Tab used to manage floating, now needs to change
+# killactive fullscreen fakefullscreen togglefloating toggleopaque pin togglesplit
 
 bind = , XF86AudioRaiseVolume, exec, $volume-up
 bind = , XF86AudioLowerVolume, exec, $volume-down
@@ -310,30 +311,32 @@ bind = , XF86MonBrightnessDown, exec, $brightness-down
 # bind = $mainMod, delete, exec, makoctl dismiss -a
 
 # Moving Around
-bind = $mainMod, h, movefocus, left
-bind = $mainMod, j, movefocus, down
-bind = $mainMod, k, movefocus, up
-bind = $mainMod, l, movefocus, right
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, j, movefocus, d
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, l, movefocus, r
 
-bind = $mainMod, Left, resizeactive, shrink width 25 
-bind = $mainMod, Down, resizeactive, shrink height 25
-bind = $mainMod, Up, resizeactive, grow height 25 
-bind = $mainMod, Right, resizeactive, grow width 25 
+bind = $mainMod, Left, resizeactive, 0 -25
+bind = $mainMod, Down, resizeactive, -25 0
+bind = $mainMod, Up, resizeactive, 25 0
+bind = $mainMod, Right, resizeactive, 0 25
 
-#bind = $mainMod SHIFT, h, move, left 25
-#bind = $mainMod SHIFT, j, move, down 25
-#bind = $mainMod SHIFT, k, move, up 25
-#bind = $mainMod SHIFT, l, move, right 25
-#
-#bind = $mainMod SHIFT, Left, move, left 50
-#bind = $mainMod SHIFT, Down, move, down 50
-#bind = $mainMod SHIFT, Up, move, up 50
-#bind = $mainMod SHIFT, Right, move, right 50
+bind =$mainMod SHIFT, l, movewindow, r
+bind =$mainMod SHIFT, h, movewindow, l
+bind =$mainMod SHIFT, k, movewindow, u
+bind =$mainMod SHIFT, j, movewindow, d
+
+bind =$mainMod SHIFT, Right, movewindow, r
+bind =$mainMod SHIFT, Left, movewindow, l
+bind =$mainMod SHIFT, Up, movewindow, u
+bind =$mainMod SHIFT, Down, movewindow, d
 
 bind = $mainMod, P, exec, notify-send "Pomodoro" "$($scripts/pomo clock)" -t 250
 bind = $mainMod SHIFT, P, exec, $scripts/pomo pause && notify-send "⏸️ Paused Pomodoro" -t 250
 
+bind = $mainMod, F, fullscreen
 #bind = $mainMod SHIFT, F, setgeometry, 1920 1080
+
 #bind = $mainMod, G, setgeometry, 900 500
 #bind = $mainMod SHIFT, G, setgeometry, 500 500
 
