--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -442,6 +442,7 @@ dwindle {
 master {
     #https://wiki.hyprland.org/Configuring/Master-Layout/ 
     new_is_master = true
+    no_gaps_when_only = 1
 }
 
 gestures {
