--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -347,27 +347,27 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
 
 # chrome webapps rules
-windowrulev2 = move,class:^google-chrome$,workspace:1
-windowrulev2 = move,class:^chrome-chat.openai.com.*$,workspace:11
-windowrulev2 = move,class:^chrome-soundcloud.com.*$,workspace:12
-windowrulev2 = move,class:^chrome-mail.superhuman.com.*$,workspace:13
-windowrulev2 = move,class:^chrome-linear.app.*$,workspace:14
-windowrulev2 = move,class:^chrome-notion.so.*$,workspace:15
-windowrulev2 = move,class:^chrome-www.loom.com.*$,workspace:16
-windowrulev2 = move,class:^chrome-calendar.notion.so.*$,workspace:17
+windowrulev2 = move,class:(^google-chrome$),workspace:1
+windowrulev2 = move,class:(^chrome-chat.openai.com.*$),workspace:11
+windowrulev2 = move,class:(^chrome-soundcloud.com.*$),workspace:12
+windowrulev2 = move,class:(^chrome-mail.superhuman.com.*$),workspace:13
+windowrulev2 = move,class:(^chrome-linear.app.*$),workspace:14
+windowrulev2 = move,class:(^chrome-notion.so.*$),workspace:15
+windowrulev2 = move,class:(^chrome-www.loom.com.*$),workspace:16
+windowrulev2 = move,class:(^chrome-calendar.notion.so.*$),workspace:17
 
 # Utilities rules 
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:clipboard-history$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:emoji-picker$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:powerwidget$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:shortcutwidget$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:music-cli$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:music-download$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:launcher$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:thunar$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:nmtui$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:blueman-manager$
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:pavucontrol$
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^clipboard-history$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^emoji-picker$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^powerwidget$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^shortcutwidget$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-cli$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-download$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^launcher$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^thunar$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^nmtui$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^blueman-manager$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^pavucontrol$)
 
 input {
     kb_layout = us
