--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -307,6 +307,10 @@ bind = , XF86Search, exec, pavucontrol
 bind = , XF86MonBrightnessUp, exec, $brightness-up
 bind = , XF86MonBrightnessDown, exec, $brightness-down
 
+bind = , XF86AudioPrev, exec, playerctl previous && $playerctl-playing 
+bind = , XF86AudioPlay, exec, playerctl play-pause && $playerctl-playing 
+bind = , XF86AudioNext, exec, playerctl next && $playerctl-playing 
+
 # add to shortcut list
 # bind = $mainMod, delete, exec, makoctl dismiss -a
 
