--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -407,14 +407,25 @@ decoration {
 animations {
     enabled = yes
     # https://wiki.hyprland.org/Configuring/Animations/ 
+animations {
+    enabled = yes
+
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-#    bezier = linear, 0, 0, 1, 1
+    animation = windows, 1, 1, default
+    animation = windowsOut, 1, 1, default, popin 80%
+    animation = border, 1, 5, default
+    animation = borderangle, 1, 6, default
+    animation = fade, 1, 1, default
+    animation = workspaces, 1, 2, default
+
+#    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+#    animation = windows, 1, 7, myBezier
+#    animation = windowsOut, 1, 7, default, popin 80%
+#    animation = border, 1, 10, default
+#    animation = borderangle, 1, 8, default
+#    animation = fade, 1, 7, default
+#    animation = workspaces, 1, 6, default
+####    bezier = linear, 0, 0, 1, 1
 #    bezier = md3_standard, 0.2, 0, 0, 1
 #    bezier = md3_decel, 0.05, 0.7, 0.1, 1
 #    bezier = md3_accel, 0.3, 0, 0.8, 0.15
