--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -216,8 +216,8 @@ workspace = 6, monitor:eDP-1
 workspace = 7, monitor:eDP-1
 workspace = 8, monitor:eDP-1
 workspace = 9, monitor:eDP-1
-workspace = 10, monitor:eDP-2
-workspace = 11, monitor:eDP-2, default:true #gpt
+workspace = 10, monitor:eDP-2, default:true
+workspace = 11, monitor:eDP-2 #gpt
 workspace = 12, monitor:eDP-2 #music
 workspace = 13, monitor:eDP-2 #email
 workspace = 14, monitor:eDP-2 #linear
