--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -175,7 +175,6 @@ $playerctl-playing = notify-send "$(playerctl metadata artist)" "$(playerctl met
 $start-wshowkeys = wshowkeys -F "JetBrainsMono Nerd Font 16" -a bottom
 $stop-wshowkeys = pkill wshowkeys
 
-$fzf-power-menu = kitty --class 'powerwidget' -e $scripts/fzf-power-menu
 $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 
 $music-cli = kitty --class 'music-cli' -e ncmpcpp 
@@ -354,7 +353,7 @@ bind = $mainMod, F, fullscreen
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = Mod1 CTRL, Delete, exec, $fzf-power-menu
+bind = Mod1 CTRL, Delete, exec, pkill wlogout || wlogout -p layer-shell
 
 # chrome webapps rules
 windowrulev2 = move,class:(^google-chrome$),workspace:1
