--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -368,7 +368,6 @@ windowrulev2 = move,class:(^chrome-calendar.notion.so.*$),workspace:17
 # Utilities rules 
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^clipboard-history$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^emoji-picker$)
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^powerwidget$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^shortcutwidget$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-cli$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-download$)
@@ -377,6 +376,8 @@ windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animatio
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^nmtui$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^blueman-manager$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^pavucontrol$)
+layerrule = blur, logout_dialog
+
 
 input {
     kb_layout = us
@@ -398,7 +399,7 @@ input {
 decoration {
     rounding = 10
     blur {
-        enabled = false
+        enabled = true
         size = 3
         passes = 1
     }
