--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -353,7 +353,7 @@ bind = $mainMod, F, fullscreen
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-bind = Mod1 CTRL, Delete, exec, pkill wlogout || wlogout -p layer-shell
+bind = Mod1 CTRL, Delete, exec, pkill wlogout || wlogout --primary-monitor 2 --buttons-per-row 4 --no-span --protocol layer-shell 
 
 # chrome webapps rules
 windowrulev2 = move,class:(^google-chrome$),workspace:1
