--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -234,7 +234,7 @@ workspace = 17, monitor:eDP-2 #calendar
 #bind = Caps_Lock, exec, hyprctl input type:touchpad events toggle && notify-send "🚀 Trackpad Toggled" -t 150
 # && notify-send "Trackpad enabled" -i /usr/share/icons/Arc/devices/symbolic/input-touchpad-symbolic.svg)
 #bind = Caps_Lock, exec, hyprctl getoption "device[apple-inc.-magic-trackpad]enabled" | grep 'int: 1' && (hyprctl keyword "device[apple-inc.-magic-trackpad]enabled" false && notify-send "Trackpad disabled" -t 150 || (hyprctl keyword "device[apple-inc.-magic-trackpad]enabled" true && notify-send "Trackpad enabled" -t 150
-bind = Caps_Lock, exec, hyprctl getoption "device:apple-inc.-magic-trackpad:enabled" | grep 'int: 1' && (hyprctl keyword "device:apple-inc.-magic-trackpad:enabled" false && notify-send "Trackpad disabled" -t 150 || (hyprctl keyword "device:apple-inc.-magic-trackpad:enabled" true && notify-send "Trackpad enabled" -t 150
+#bind = Caps_Lock, exec, hyprctl getoption "device:apple-inc.-magic-trackpad:enabled" | grep 'int: 1' && (hyprctl keyword "device:apple-inc.-magic-trackpad:enabled" false && notify-send "Trackpad disabled" -t 150 || (hyprctl keyword "device:apple-inc.-magic-trackpad:enabled" true && notify-send "Trackpad enabled" -t 150
 
 bind = $mainMod, Return, exec, flatpak run com.google.Chrome
 bind = $mainMod SHIFT, Return, exec, $host -e fish
