--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -135,8 +135,10 @@ misc {
 }
 
 # waybar
-exec-once = waybar -c ~/.config/waybar/config-1 -s ~/.config/waybar/style-1.css
-exec-once = waybar -c ~/.config/waybar/config-0 -s ~/.config/waybar/style-0.css
+exec-once = waybar 
+#exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
+#exec-once = waybar -c ~/.config/waybar/config-1 -s ~/.config/waybar/style-1.css
+#exec-once = waybar -c ~/.config/waybar/config-0 -s ~/.config/waybar/style-0.css
 
 # Polkit-Gnome
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
