--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -136,9 +136,6 @@ misc {
 
 # waybar
 exec-once = waybar 
-#exec-once = waybar -c ~/.config/waybar/config -s ~/.config/waybar/style.css
-#exec-once = waybar -c ~/.config/waybar/config-1 -s ~/.config/waybar/style-1.css
-#exec-once = waybar -c ~/.config/waybar/config-0 -s ~/.config/waybar/style-0.css
 
 # Polkit-Gnome
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
@@ -169,8 +166,7 @@ $volume-mute = $scripts/volume mute
 $brightness-up = $scripts/brightness-control up
 $brightness-down = $scripts/brightness-control down
 
-$waybar-toggle-0 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-0'
-$waybar-toggle-1 = pkill -SIGUSR1 -f 'waybar -c /var/home/dev/.config/waybar/config-1'
+$waybar-toggle = pkill -SIGUSR1 -f 'waybar'
 
 $playerctl-playing = notify-send "$(playerctl metadata artist)" "$(playerctl metadata title)" -t 200
 
@@ -258,8 +254,8 @@ bind = $mainMod, Z, exec, $record-start
 bind = $mainMod SHIFT, Z, exec, $record-select-area
 bind = $mainMod, X, exec, $record-stop
 
-bind = $mainMod, I, exec, $waybar-toggle-0
-bind = $mainMod SHIFT, I, exec, $waybar-toggle-1
+bind = $mainMod, I, exec, $waybar-toggle
+bind = $mainMod SHIFT, I, exec, $waybar-toggle
 
 bind = $mainMod, O, exec, makoctl dismiss 
 bind = $mainMod SHIFT, O, exec, makoctl dismiss -a
