--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -2,25 +2,24 @@
 
 {
     "include": "~/.config/waybar/modules",
-    "name": "bar-1",                    
-    "bar_id": "bar-1",                          
+    "name": "bar",                    
+    "bar_id": "bar",                          
     "layer": "top",                             
     "mode": "dock",                             
     "output": "eDP-2",
     "exclusive": false,                          
     "passthrough": false,                       
-    "position": "bottom",                        
-    "height": "",                                   
-    "width": "",                                    
-    "spacing": 0,                                   
-    "margin": 0,                                    
-    "margin-top": 0,                            
-    "margin-bottom": 2,                         
-    "margin-left": 0,                           
-    "margin-right": 0,                          
+    "position": "top",                        
     "fixed-center": true,                       
     "ipc": true,                                    
-    "modules-left": ["custom/pomo"],
-    "modules-center": ["hyprland/workspaces", "pulseaudio", "backlight", "battery", "clock#3"],
-    "modules-right": ["pulseaudio#2", "backlight#2", "clock"]
+    "modules-left": ["clock", "wlr/workspaces"],
+    "modules-center": ["hyprland/window"],
+    "modules-right": [
+        "tray",
+        "network",
+        "pulseaudio",
+        "backlight",
+        "battery",
+        "clock"
+    ]
 }
