--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -9,7 +9,7 @@
     "output": "eDP-2",
     "exclusive": false,                          
     "passthrough": false,                       
-    "position": "top",                        
+    "position": "bottom",                        
     "fixed-center": true,                       
     "ipc": true,                                    
     "modules-left": ["hyprland/workspaces"],
