--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -12,10 +12,9 @@
     "position": "bottom",                        
     "fixed-center": true,                       
     "ipc": true,                                    
-    "modules-left": ["workspaces"],
+    "modules-left": ["hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
     "modules-right": [
-        "tray",
         "network",
         "pulseaudio",
         "backlight",
