--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -401,13 +401,15 @@ decoration {
     rounding = 10
     blur {
         enabled = true
-        size = 3
+        size = 12
         passes = 1
+        vibrancy = 0.1696
+        new_optimizations = true
     }
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba($baseAlphaee)
     screen_shader = ~/.config/hypr/shaders/blue-light-filter.glsl
 }
 
