--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -12,7 +12,7 @@
     "position": "bottom",                        
     "fixed-center": true,                       
     "ipc": true,                                    
-    "modules-left": ["date","hyprland/workspaces"],
+    "modules-left": ["custom/date","hyprland/workspaces"],
     "modules-center": [],
     "modules-right": [
         "pulseaudio",
