--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -239,7 +239,7 @@ bind = $mainMod SHIFT, Return, exec, $host -e fish
 
 bind = $mainMod SHIFT, Q, killactive,
 
-bind = $mainMod, D, exec, kitty --class="launcher" -e env GLYPH_COMMAND="" GLYPH_DESKTOP="" GLYPH_PROMPT="🚀 " $scripts/launcher
+bind = $mainMod, D, exec, rofi -show drun 
 
 bind = $mainMod, V, exec, kitty --class "clipboard-history" -e $scripts/fzf-clipboard-history
 
@@ -372,7 +372,7 @@ windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animatio
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^shortcutwidget$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-cli$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-download$)
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^launcher$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^rofi$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^thunar$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^nmtui$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^blueman-manager$)
