--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -178,8 +178,6 @@ $fzf-shortcuts = kitty --class 'shortcutwidget' -e $scripts/fzf-shortcuts
 $music-cli = kitty --class 'music-cli' -e ncmpcpp 
 $music-dl = $scripts/music-download
 $color-picker = $scripts/colorpicker 
-$emoji = $scripts/emoji-picker
-
 
 ## TEMP
 bind = $mainMod, R, exec, /var/home/dev/.config/hypr/scripts/gestures forward
@@ -243,7 +241,7 @@ bind = $mainMod, D, exec, rofi -show drun
 
 bind = $mainMod, V, exec, kitty --class "clipboard-history" -e $scripts/fzf-clipboard-history
 
-bind = $mainMod SHIFT, V, exec, kitty --class "emoji-picker" -e $emoji
+bind = $mainMod SHIFT, V, exec, rofimoji -a clipboard
 
 bind = $mainMod, A, exec, $screenshot-full
 bind = $mainMod SHIFT, A, exec, $screenshot-area
@@ -368,7 +366,7 @@ windowrulev2 = move,class:(^chrome-calendar.notion.so.*$),workspace:17
 
 # Utilities rules 
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^clipboard-history$)
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^emoji-picker$)
+windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^rofimoji$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^shortcutwidget$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-cli$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-download$)
