--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -118,9 +118,8 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 exec-once = mako
 
 # clipboard
-exec-once = clipman restore
-exec-once = wl-paste --type text --watch clipman store
-exec-once = wl-paste --type image --watch clipman store
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
 
 # pomodoro timer
 exec-once = $scripts/pomo start
@@ -239,7 +238,7 @@ bind = $mainMod SHIFT, Q, killactive,
 
 bind = $mainMod, D, exec, rofi -show drun 
 
-bind = $mainMod, V, exec, kitty --class "clipboard-history" -e $scripts/fzf-clipboard-history
+bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 bind = $mainMod SHIFT, V, exec, rofimoji -a clipboard
 
@@ -365,7 +364,6 @@ windowrulev2 = move,class:(^chrome-www.loom.com.*$),workspace:16
 windowrulev2 = move,class:(^chrome-calendar.notion.so.*$),workspace:17
 
 # Utilities rules 
-windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^clipboard-history$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^rofimoji$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^shortcutwidget$)
 windowrulev2 = float, size 35% 35%, move 63% 60%, center monitor eDP-2, animation slide, class:(^music-cli$)
