--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -1,4 +1,13 @@
+profile Thinkpad {
+    output eDP-1 scale 1.5 position 0,0
+    exec swaymsg gaps outer 5
+    exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_1 rs.wl.gammarelay Temperature q 3500
+}
+
 profile Duo {
     output eDP-1 scale 2 position 0,0
     output eDP-2 scale 2 position 0,900
+    exec swaymsg gaps outer 2
+    exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_1 rs.wl.gammarelay Temperature q 3500
+    exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_2 rs.wl.gammarelay Temperature q 4000
 }
