--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -51,6 +51,8 @@ exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CU
 exec hash dbus-update-activation-environment 2>/dev/null && \
         dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP=sway
 
+exec wl-gammarelay-rs run
+
 #exec_always {
 exec {
         pkill kanshi 
