--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -58,6 +58,7 @@ exec wl-paste --type image --watch cliphist store
 exec autotiling -w 1 3 5 7 9
 exec $scripts/pomo start
 exec $scripts/pomo notify
+exec kanshi
 
 exec swaybg -c '#000000'
 #exec ~/.azotebg 
@@ -138,7 +139,7 @@ workspace 12 output 'eDP-2' #music
 workspace 13 output 'eDP-2' #email
 workspace 14 output 'eDP-2' #linear
 workspace 15 output 'eDP-2' #notion
-workspace 16 output 'eDP-2' #loom
+workspace 16 output 'eDP-2' #obs
 workspace 17 output 'eDP-2' #calendar
 # Communication Tools? workspace name: comms, whatsapp web, slack, kumospace
 #    bindsym $mod+Slash exec flatpak 'run' 'net.mkiol.SpeechNote'
@@ -204,7 +205,7 @@ bindsym $mod+comma workspace 15
 bindsym $mod+Shift+comma exec $chrome --app=https://notion.so/
 
 bindsym $mod+semicolon workspace 16 
-bindsym $mod+Shift+semicolon exec $chrome --app=https://www.loom.com/home
+bindsym $mod+Shift+semicolon exec flatpak run com.obsproject.Studio
 
 bindsym $mod+period workspace 17
 bindsym $mod+Shift+period exec $chrome --app=https://calendar.notion.so/
@@ -276,7 +277,7 @@ for_window [title="^chrome-soundcloud.com.*$"] workspace 12
 for_window [title="^chrome-mail.superhuman.com.*$"] workspace 13
 for_window [title="^chrome-linear.app.*$"] workspace 14
 for_window [title="^chrome-notion.so.*$"] workspace 15
-for_window [title="^chrome-www.loom.com.*$"] workspace 16
+for_window [app_id="com.obsproject.Studio"] workspace 16
 for_window [title="^chrome-calendar.notion.so.*$"] workspace 17
 
 # Utilities rules
@@ -342,10 +343,10 @@ swipe:5:up   exec swaymsg gaps vertical current plus 50
 swipe:5:down  exec swaymsg gaps vertical current minus 50
 }
 
-exec_always {
-        pkill kanshi 
-        kanshi &
-}
+#exec_always {
+#        pkill kanshi 
+#        kanshi &
+#}
 
 # Always start from workspace 1
 workspace 1
