--- a/dot_local/share/applications/loom.desktop
+++ b/dot_local/share/applications/loom.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Loom Video
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://www.loom.com/home
+Icon=loom
