--- a/dot_local/share/applications/calendar.desktop
+++ b/dot_local/share/applications/calendar.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Calendar from Notion
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://calendar.notion.so/
+Icon=calendar
