--- a/dot_local/share/applications/chatgpt.desktop
+++ b/dot_local/share/applications/chatgpt.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=ChatGPT 
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://chat.openai.com/
+Icon=openai
