--- a/dot_local/share/applications/gcloud.desktop
+++ b/dot_local/share/applications/gcloud.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Google Cloud Drive
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://drive.google.com/drive/u/0/
+Icon=drive
