--- a/dot_local/share/applications/linear.desktop
+++ b/dot_local/share/applications/linear.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Linear Tasks
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://linear.app/
+Icon=linear
