--- a/dot_local/share/applications/notion.desktop
+++ b/dot_local/share/applications/notion.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Notion Notes
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://notion.so/
+Icon=notion
