--- a/dot_local/share/applications/ollama.desktop
+++ b/dot_local/share/applications/ollama.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Ollama Web UI
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://localhost:8080
+Icon=ollama
