--- a/dot_local/share/applications/slack.desktop
+++ b/dot_local/share/applications/slack.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Slack
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://app.slack.com/client/T045A37HTU2
+Icon=slack
