--- a/dot_local/share/applications/soundcloud.desktop
+++ b/dot_local/share/applications/soundcloud.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=SoundCloud
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://soundcloud.com
+Icon=soundcloud
