--- a/dot_local/share/applications/superhuman.desktop
+++ b/dot_local/share/applications/superhuman.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=Superhuman Mail
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://mail.superhuman.com/
+Icon=superhuman
