--- a/dot_local/share/applications/whatsapp.desktop
+++ b/dot_local/share/applications/whatsapp.desktop
@@ -6,3 +6,4 @@ Terminal=false
 Type=Application
 Name=WhatsApp
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://web.whatsapp.com/
+Icon=whatsapp
