--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -31,6 +31,7 @@ hide_edge_borders smart
 
 seat seat0 xcursor_theme Bibata-Modern-Classic 24
 seat seat0 fallback true
+seat seat0 hide_cursor 1000
 
 # Gnome Settings
 set $gnome-schema org.gnome.desktop.interface
@@ -283,6 +284,7 @@ for_window [title="^chrome-notion.so.*$"] workspace 15
 for_window [app_id="com.obsproject.Studio"] workspace 16
 for_window [title="^chrome-calendar.notion.so.*$"] workspace 17
 for_window [title="^chrome-app.slack.com.*$"] workspace 19
+for_window [app_id="^net.mkiol.SpeechNote$"] floating  enable
 
 # Utilities rules
 for_window [title="rofimoji"] border pixel 0, floating enable, resize 35% 35%, move 63% 60%
