--- a/dot_local/share/applications/jan-ai.desktop
+++ b/dot_local/share/applications/jan-ai.desktop
@@ -5,5 +5,5 @@ Version=1.0
 Terminal=false
 Type=Application
 Name=Jan ai UI
-Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=http://0.0.0.0:3000
+Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=http://localhost:3000
 Icon=jan-ai
