--- a/dot_local/share/applications/ollama.desktop
+++ b/dot_local/share/applications/ollama.desktop
@@ -5,5 +5,5 @@ Version=1.0
 Terminal=false
 Type=Application
 Name=Ollama Web UI
-Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=http://0.0.0.0:8081
+Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=http://localhost:8081
 Icon=ollama
