Fix youtube music app

--- a/dot_local/share/applications/youtube-music.desktop
+++ b/dot_local/share/applications/youtube-music.desktop
@@ -4,6 +4,6 @@
 Version=1.0
 Terminal=false
 Type=Application
-Name=SoundCloud
+Name=Youtube Music
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://music.youtube.com
 Icon=youtube-music
