--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -57,7 +57,7 @@ exec wl-gammarelay-rs run
 exec mako
 exec wl-paste --type text --watch cliphist store
 exec wl-paste --type image --watch cliphist store
-exec autotiling -w 1 3 5 7 9
+exec autotiling 
 exec $scripts/pomo start
 exec $scripts/pomo notify
 exec kanshi
@@ -167,7 +167,7 @@ bindsym $mod+Shift+Return exec $host -e fish
 bindsym $mod+Shift+Q kill
 bindsym $mod+D exec rofi -show drun 
 
-bindsym $mod+V exec cliphist list | rofi -dmenu -columns 1 | cliphist decode | wl-copy
+bindsym $mod+V exec cliphist list | rofi -dmenu -theme-str '#listview { columns : 1; lines: 8 }' | cliphist decode | wl-copy
 bindsym $mod+Shift+V exec rofimoji -a clipboard
 
 bindsym $mod+A exec $screenshot-full
