--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -167,7 +167,7 @@ bindsym $mod+Shift+Return exec $host -e fish
 bindsym $mod+Shift+Q kill
 bindsym $mod+D exec rofi -show drun 
 
-bindsym $mod+V exec cliphist list | rofi -dmenu -theme-str '#listview { columns : 1; lines: 8 }' | cliphist decode | wl-copy
+bindsym $mod+V exec cliphist list | rofi -dmenu -theme-str '#listview { columns : 1 ; lines: 8 ; }' | cliphist decode | wl-copy
 bindsym $mod+Shift+V exec rofimoji -a clipboard
 
 bindsym $mod+A exec $screenshot-full
