--- a/dot_local/share/applications/whatsapp.desktop
+++ b/dot_local/share/applications/whatsapp.desktop
@@ -4,6 +4,6 @@
 Version=1.0
 Terminal=false
 Type=Application
-Name=WhatsApp
+Name=WhatsApp Web
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://web.whatsapp.com/
 Icon=whatsapp
