neovim + kitty terminal ctrl shift B shortcut to toggle tree instead of ctrl N (now launches google chrome)

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -29,6 +29,12 @@ remember_window_size  no
 # Custom key mapping for font resizing without the 'Shift' key
 map ctrl+equal increase_font_size
 map ctrl+minus decrease_font_size
+
+# Remap ctrl+shift+b from "move window backwards" (useless since using tiling wm) to nvim-specific tree toggle
+unmap ctrl+shift+b
+map ctrl+shift+b send_text all \x1b[66;5u
+
+
 # maybe ctrl+directions to go back 1 word etc
 ## Clipboard
 ##map ctrl+shift+v        paste_from_clipboard
